resolve 1.21.1 conflicts